Update 'iucg1bwor-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:a9ecadec9909958207a40443299e7871ea119a8a@sha256:b5695513f1e459a68b37814ba087789ec70c0d9ed2c593913fc60152931a33d8

--- a/components/iucg1bwor-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/iucg1bwor-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: iucg1bwor-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:a9ecadec9909958207a40443299e7871ea119a8a@sha256:b5695513f1e459a68b37814ba087789ec70c0d9ed2c593913fc60152931a33d8
+          name: container-image
